[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Art/white_pix.png" type="Texture" id=2]
[ext_resource path="res://Fonts/yoster.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/dpcomic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/acknowtt.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/buttons/gamepad/GB_A.png" type="Texture" id=6]
[ext_resource path="res://Art/buttons/gamepad/GB_B.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]

resource_name = "change_scene"
length = 5.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("bg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("down_line:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1.4, 1.9, 3.5, 3.9, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ), Vector2( 0, 180 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("down_line:rect_size")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1.4, 1.9, 3.5, 3.9, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 85, 0 ), Vector2( 85, 0 ), Vector2( 85, 180 ), Vector2( 85, 180 ), Vector2( 85, 180 ), Vector2( 85, 180 ), Vector2( 0, 180 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("upper_line:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 1.1, 1.6, 2.1, 3.7, 4.1, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 104 ), Vector2( 0, 104 ), Vector2( 0, 104 ), Vector2( 0, 104 ), Vector2( 0, 104 ), Vector2( 0, 104 ), Vector2( 0, 104 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("upper_line:rect_size")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0, 1.1, 1.6, 2.1, 3.7, 4.1, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 48 ), Vector2( 0, 48 ), Vector2( 159, 48 ), Vector2( 159, 48 ), Vector2( 159, 48 ), Vector2( 159, 48 ), Vector2( 0, 48 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("zone:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 0, 1.7, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("zone:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 0, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 98, 110 ), Vector2( 98, 110 ), Vector2( 4, 110 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("zone:percent_visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/keys = {
"times": PoolRealArray( 0, 1.7, 2, 4.1, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0, 1.0, 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("loc:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/keys = {
"times": PoolRealArray( 0, 1.5, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("loc:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/keys = {
"times": PoolRealArray( 0, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 53, 128 ), Vector2( 53, 128 ), Vector2( 20, 128 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("loc:percent_visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/keys = {
"times": PoolRealArray( 0, 1.5, 1.8, 3.9, 4.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0, 1.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("down_line:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/keys = {
"times": PoolRealArray( 0, 0.8, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("upper_line:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/keys = {
"times": PoolRealArray( 0, 1, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="DynamicFont" id=2]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 16
use_mipmaps = false
use_filter = false
extra_spacing_top = 2
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="Animation" id=7]

resource_name = "do"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("buttons:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die_menu_end"
} ]
}

[sub_resource type="Animation" id=4]

resource_name = "game_over"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("bg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 1.6, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("text:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("buttons:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("buttons:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("text:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0, 2.3, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("..")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die_menu_buttons"
} ]
}

[sub_resource type="DynamicFont" id=5]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="UI" type="Control" groups=[
"ui",
]]

anchor_right = 1
anchor_bottom = 1
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
zone_text = ""
location = "Unknow"

[node name="hud" type="Control" parent="."]

editor/display_folded = true
anchor_right = 1
anchor_bottom = 1
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="health" type="VBoxContainer" parent="hud"]

margin_left = 7.0
margin_top = 6.0
margin_right = 49.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="1" type="Control" parent="hud/health"]

margin_right = 42.0
margin_bottom = 6.0
rect_min_size = Vector2( 0, 6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="under" type="TextureRect" parent="hud/health/1"]

self_modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="bg" type="TextureRect" parent="hud/health/1/under"]

self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
anchor_right = 1
anchor_bottom = 1
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="line" type="TextureRect" parent="hud/health/1"]

self_modulate = Color( 1, 0.380392, 0.698039, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="change_scene" type="Control" parent="."]

anchor_right = 1
anchor_bottom = 1
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="bg" type="TextureRect" parent="change_scene"]

modulate = Color( 0, 0, 0, 0 )
anchor_right = 1
anchor_bottom = 1
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Visibility" ]

[node name="down_line" type="TextureRect" parent="change_scene"]

visible = false
modulate = Color( 0.443137, 0.890196, 0.572549, 1 )
anchor_left = 1
anchor_right = 1
anchor_bottom = 1
margin_left = 320.0
margin_right = 320.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
_sections_unfolded = [ "Hint", "Mouse", "Rect", "Size Flags", "Visibility" ]

[node name="upper_line" type="TextureRect" parent="change_scene"]

visible = false
modulate = Color( 0.380392, 0.635294, 1, 1 )
anchor_right = 1
margin_top = 104.0
margin_right = 320.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
_sections_unfolded = [ "Hint", "Mouse", "Rect", "Size Flags", "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="change_scene"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/change_scene = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "change_scene"

[node name="zone" type="Label" parent="change_scene"]

visible = false
margin_left = 4.0
margin_top = 110.0
margin_right = 130.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.952941, 0.572549, 1 )
custom_colors/font_color_shadow = Color( 0.254902, 0.572549, 0.764706, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
text = "ZONE 12"
clip_text = true
percent_visible = 0.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="loc" type="Label" parent="change_scene"]

visible = false
margin_left = 20.0
margin_top = 128.0
margin_right = 153.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.254902, 0.572549, 0.764706, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Green heaven"
align = 2
clip_text = true
percent_visible = 0.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="game_over" type="Control" parent="."]

visible = false
anchor_right = 1
anchor_bottom = 1
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="bg" type="TextureRect" parent="game_over"]

visible = false
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1
anchor_bottom = 1
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="game_over"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/do = SubResource( 7 )
anims/game_over = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "change_scene"

[node name="buttons" type="Control" parent="game_over"]

visible = false
margin_top = 160.0
margin_right = 194.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="try_again" type="Label" parent="game_over/buttons"]

editor/display_folded = true
margin_left = 21.0
margin_top = 1.0
margin_right = 95.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Try Again"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="button" type="TextureRect" parent="game_over/buttons/try_again"]

margin_left = -20.0
margin_top = 1.0
margin_right = -4.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="exit" type="Label" parent="game_over/buttons"]

margin_left = 129.0
margin_top = 1.0
margin_right = 203.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Go Menu"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="button" type="TextureRect" parent="game_over/buttons/exit"]

margin_left = -20.0
margin_top = 1.0
margin_right = -4.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0

[node name="text" type="Label" parent="game_over"]

visible = false
anchor_right = 1
anchor_bottom = 1
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0.858824, 0.254902, 0.380392, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "GAME OVER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="checker" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="timeout" from="checker" to="." method="_on_checker_timeout"]


